<resources>
    <string name="app_name">Multimedia</string>
    <string name="album">Album</string>
    <string name="artist">Artist:</string>
    <string name="circle">circle</string>
    <string name="playback_error">Playback error</string>
    <string name="album_not_found">Album not found</string>
    <string name="server_error">Server error</string>
    <string name="error">Error: %1$d</string>
    <string name="body_is_null">Body is null</string>
    <string name="network_error">Network error: %1$s</string>
    <string name="error_description">Error</string>
    <string name="something_went_wrong">Something went wrong. Check your internet connection.</string>
    <string name="update">Update</string>
</resources>