<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/album_shimmer" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/ic_button_size"
            android:layout_height="@dimen/ic_button_size"
            android:src="@android:drawable/ic_dialog_alert"
            android:contentDescription="@string/error_description"
            app:tint="?attr/colorError" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/something_went_wrong"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/update" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainCL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/albumCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                style="@style/Widget.AppTheme.HeadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_spacing"
                android:paddingBottom="@dimen/min_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album"
                tools:text="One more Light Live" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="www.soundhelix.com" />

            <TextView
                android:id="@+id/artistTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_spacing"
                android:text="@string/artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <TextView
                android:id="@+id/artist"
                style="@style/Widget.Material3.TextView.ListItem.LabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/min_spacing"
                android:paddingEnd="@dimen/min_spacing"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/artistTitle"
                app:layout_constraintStart_toEndOf="@id/artistTitle"
                app:layout_constraintTop_toTopOf="@id/artistTitle"
                tools:text="Linkin Park" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artistTitle"
                tools:text="2017" />

            <ImageView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/circle"
                android:src="@drawable/ic_circle_24"
                app:layout_constraintBottom_toBottomOf="@id/year"
                app:layout_constraintStart_toEndOf="@id/year"
                app:layout_constraintTop_toTopOf="@id/year" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/point"
                app:layout_constraintStart_toEndOf="@id/point"
                app:layout_constraintTop_toTopOf="@id/point"
                tools:text="Alternative" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playAlbum"
                style="@style/Widget.AppTheme.PlayButton"
                android:layout_width="@dimen/ic_button_size"
                android:layout_height="@dimen/ic_button_size"
                android:layout_marginTop="@dimen/common_spacing"
                android:checkable="true"
                app:icon="@drawable/ic_play_pause"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year"
                tools:checked="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listTracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/common_spacing"
            android:padding="@dimen/medium_spacing"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumCL"
            tools:listitem="@layout/card_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>